# Prometheus-terminal

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Evaluation-log.md  README.md  docker-compose.win_mac.yml  docker-compose.yml  example.env  example_settings.toml  prometheus_temp.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pyink-check.yml  pytest_and_coverage.yml  ruff-check.yml  ruff_check.yml
docs/: Evaluation-log.md
prometheus/agents/: chat_history.py  context_provider_agent.py  message_types.py
prometheus/app/: db.py  dependencies.py  exception_handler.py  main.py  register_login_required_routes.py  shared_state.py
prometheus/bench/: __init__.py  prometheus_agent.py
prometheus/chat_models/: custom_chat_openai.py
prometheus/configuration/: config.py  example_config.json
prometheus/docker/: base_container.py  general_container.py  python_container.py  user_defined_container.py
prometheus/exceptions/: file_operation_exceptions.py  jwt_exception.py  server_exception.py
prometheus/git/: git_repository.py
prometheus/graph/: file_graph_builder.py  graph_types.py  knowledge_graph.py  types.py
prometheus/knowledge_graph/: types.py
prometheus/message/: message_history.py  message_types.py
prometheus/models/: context.py  test_patch_result.py
prometheus/neo4j/: handler.py  knowledge_graph_handler.py  message_history_handler.py
prometheus/parser/: file_types.py  tree_sitter_parser.py
prometheus/script/: create_db_and_tables.py  create_superuser.py  generate_jwt_token.py  test_llm_service.py
prometheus/tools/: container_command.py  file_operation.py  graph_traversal.py
prometheus/utils/: file_utils.py  issue_util.py  jwt_utils.py  lang_graph_util.py  llm_util.py  neo4j_util.py  patch_util.py  postgres_util.py  str_util.py
runs/2025-08-13__09-37-19/: results.json  run_metadata.json
runs/2025-08-13__18-17-10/: results.json  run_metadata.json
tests/agents/: test_context_provider_agent.py
tests/app/: test_db.py  test_main.py
tests/docker/: test_base_container.py  test_general_container.py  test_python_container.py  test_user_defined_container.py
tests/git/: test_git_repository.py
tests/graph/: test_file_graph_builder.py  test_graph_types.py  test_knowledge_graph.py  test_types.py
tests/knowledge_graph/: test_foo.py  test_types.py
tests/message/: test_message_history.py
tests/neo4j/: test_handler.py  test_knowledge_graph_handler.py  test_message_history_handler.py
tests/test_utils/: llm.py  (+3 more)
(+299 files in other folders)
