[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Prometheus"
version = "0.0.1"
dependencies = [
  "langchain==0.3.3",
  "tree-sitter==0.21.3",
  "tree-sitter-languages==1.10.2",
  "neo4j==5.20.0",
  "fastapi[standard]==0.115.2",
  "langchain-anthropic==0.2.3",
  "igittigitt==2.1.5",
  "litellm==1.50.1",
]
requires-python = ">= 3.11"

[project.optional-dependencies]
test = [
  "ruff==0.6.9",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "testcontainers==4.8.2",
  "langchain_community==0.3.2",
]

[tool.ruff]
indent-width = 2
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
